# pkg-upd

./: .appveyor.yml
.github/workflows/: build.yml  clean.yml  linting.yml
aer/: Cargo.toml
aer/src/: lib.rs
aer/tests/: aer-ver.rs
aer_data/: Cargo.toml
aer_data/src/: defaults.rs  lib.rs  metadata.rs  prelude.rs  updater.rs
aer_data/src/metadata/: chocolatey.rs
aer_data/src/updater/: chocolatey.rs
aer_license/: Cargo.toml
aer_license/src/: lib.rs
aer_upd/: Cargo.toml
aer_upd/src/: generators.rs  lib.rs
aer_upd/src/generators/: chocolatey.rs
aer_upd/src/generators/chocolatey/: nuspec.rs
aer_upd/src/parsers/: toml.rs
aer_upd/src/runners/: powershell.rs
aer_upd/test-data/: deserialize-full.aer.toml  license-expression.aer.toml  license-long.aer.toml  license-short.aer.toml  license-url.aer.toml
aer_upd/test-data/nuspecs/: empty.nuspec  full.nuspec
aer_version/: Cargo.toml
aer_version/src/: lib.rs
aer_version/src/versions/: chocolatey.rs
aer_web/: Cargo.toml
pkg-data/: Cargo.toml
pkg-upd/: Cargo.toml
pkg-upd/src/: lib.rs  logging.rs  main.rs  rules.rs
pkg-upd/src/rules/: metadata.rs
pkg-upd/src/rules/metadata/: chocolatey.rs  id_not_empty.rs  maintainers_not_empty.rs  (+1 more)
pkg-upd/tests/: pkg-web.rs
pkg-version/src/: lib.rs
pkg-version/src/versions/: chocolatey.rs
pkg-web/: Cargo.toml
pkg-web/src/: elements.rs  lib.rs  request.rs  response.rs
pkg-web/src/response/: binary.rs  html.rs
pkg_web/: Cargo.toml
pkg_web/src/: errors.rs  lib.rs  request.rs
pkg_web/src/response/: binary.rs  html.rs
(+1 files in other folders)
