[package]
name = "aer_upd"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

[features]
default = ["powershell", "toml_data", "chocolatey"]
chocolatey = ["aer_data/chocolatey", "xml-rs"]
toml_data = ["toml", "aer_data/serialize"]
powershell = ["aer_data/serialize", "lazy_static", "serde_json", "serde"]

[dependencies]
aer_data = { path = "../aer_data" }
aer_web = { path = "../aer_web" }
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.14"
serde = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
toml = { version = "0.5.8", optional = true }
xml-rs = { version = "0.8.3", optional = true }

[dev-dependencies]
assert_fs = "1.0.1"
predicates = "1.0.7"
rstest = "0.7.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
